--- a/components/SearchInput/SearchInput.scss
+++ b/components/SearchInput/SearchInput.scss
@@ -1,4 +1,5 @@
-@import "../../styles/colors.scss";
+@import 'styles/colors.scss';
+@import 'styles/mixins.scss';
 
 .search_bar {
   width: 100%;
@@ -49,6 +50,8 @@
 
       ::placeholder {
         overflow: hidden;
+        color: $focus-grey;
+        opacity: 1;
       }
 
       .ui.label.dropdown {
