--- a/styles/form.scss
+++ b/styles/form.scss
@@ -1,4 +1,4 @@
-@import "./colors.scss";
+@import './colors.scss';
 
 /*----------------------------------
   Override form semantic defaults
@@ -77,6 +77,7 @@
 
   &::placeholder {
     color: $focus-grey;
+    opacity: 1;
   }
 }
 
@@ -153,5 +154,6 @@
 
   &::placeholder {
     color: $focus-grey;
+    opacity: 1;
   }
 }
